feat: End of first sprint, with every functionalities implemented